--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ logo: 'assets/images/logo.png'
 
 favicon: 'assets/images/logo.png'
 
-baseurl: /
+baseurl: /christophercatchings.com/
 
 google_analytics: 'UA-xxxxxxxx-1'
 
