--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ email: the.software.shinobi@gmail.com
 
 authors:
 
-  softwareshinobi:
-    name: softwareshinobi
-    display_name: Software Shinobi
+  christopher:
+    name: christopher
+    display_name: Christopher Catchings
     avatar: 'assets/images/softwareshinobi.jpg'
     email: the.software.shinobi@gmail.com
     web: https://softwareshinobi.digital
